src/grammar/VgdlParser.py
# Generated from Vgdl.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class VgdlParser ( Parser ):

    grammarFileName = "Vgdl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'BasicGame'", "'SpriteSet'", "'>'", "'LevelMapping'", 
                     "'InteractionSet'", "'TerminationSet'", "'win='", "'='", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMENT", "NEWLINE", "WS", 
                      "TRUE", "FALSE", "WORD", "LEVELDEFINITION", "ANY", 
                      "INDENT", "DEDENT" ]

    RULE_basicGame = 0
    RULE_spriteSet = 1
    RULE_spriteDefinition = 2
    RULE_levelMapping = 3
    RULE_interactionSet = 4
    RULE_interaction = 5
    RULE_terminationSet = 6
    RULE_terminationCriteria = 7
    RULE_parameter = 8
    RULE_nlindent = 9

    ruleNames =  [ "basicGame", "spriteSet", "spriteDefinition", "levelMapping", 
                   "interactionSet", "interaction", "terminationSet", "terminationCriteria", 
                   "parameter", "nlindent" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    COMMENT=10
    NEWLINE=11
    WS=12
    TRUE=13
    FALSE=14
    WORD=15
    LEVELDEFINITION=16
    ANY=17
    INDENT=18
    DEDENT=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BasicGameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nlindent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.NlindentContext)
            else:
                return self.getTypedRuleContext(VgdlParser.NlindentContext,i)


        def DEDENT(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.DEDENT)
            else:
                return self.getToken(VgdlParser.DEDENT, i)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.ParameterContext)
            else:
                return self.getTypedRuleContext(VgdlParser.ParameterContext,i)


        def spriteSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.SpriteSetContext)
            else:
                return self.getTypedRuleContext(VgdlParser.SpriteSetContext,i)


        def levelMapping(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.LevelMappingContext)
            else:
                return self.getTypedRuleContext(VgdlParser.LevelMappingContext,i)


        def interactionSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.InteractionSetContext)
            else:
                return self.getTypedRuleContext(VgdlParser.InteractionSetContext,i)


        def terminationSet(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.TerminationSetContext)
            else:
                return self.getTypedRuleContext(VgdlParser.TerminationSetContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.NEWLINE)
            else:
                return self.getToken(VgdlParser.NEWLINE, i)

        def getRuleIndex(self):
            return VgdlParser.RULE_basicGame

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasicGame" ):
                listener.enterBasicGame(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasicGame" ):
                listener.exitBasicGame(self)




    def basicGame(self):

        localctx = VgdlParser.BasicGameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_basicGame)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.match(VgdlParser.T__0)
            self.state = 24
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==VgdlParser.WORD:
                self.state = 21
                self.parameter()
                self.state = 26
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 27
            self.nlindent()
            self.state = 37
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 35
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        self.state = 28
                        self.spriteSet()
                        pass

                    elif la_ == 2:
                        self.state = 29
                        self.levelMapping()
                        pass

                    elif la_ == 3:
                        self.state = 30
                        self.interactionSet()
                        pass

                    elif la_ == 4:
                        self.state = 31
                        self.terminationSet()
                        pass

                    elif la_ == 5:
                        self.state = 32
                        self.match(VgdlParser.DEDENT)
                        pass

                    elif la_ == 6:
                        self.state = 33
                        self.nlindent()
                        pass

                    elif la_ == 7:
                        self.state = 34
                        self.match(VgdlParser.NEWLINE)
                        pass

             
                self.state = 39
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 40
            self.match(VgdlParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpriteSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nlindent(self):
            return self.getTypedRuleContext(VgdlParser.NlindentContext,0)


        def DEDENT(self):
            return self.getToken(VgdlParser.DEDENT, 0)

        def spriteDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.SpriteDefinitionContext)
            else:
                return self.getTypedRuleContext(VgdlParser.SpriteDefinitionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.NEWLINE)
            else:
                return self.getToken(VgdlParser.NEWLINE, i)

        def getRuleIndex(self):
            return VgdlParser.RULE_spriteSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSpriteSet" ):
                listener.enterSpriteSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSpriteSet" ):
                listener.exitSpriteSet(self)




    def spriteSet(self):

        localctx = VgdlParser.SpriteSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_spriteSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            self.match(VgdlParser.T__1)
            self.state = 43
            self.nlindent()
            self.state = 57 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VgdlParser.NEWLINE:
                    self.state = 44
                    self.match(VgdlParser.NEWLINE)
                    self.state = 49
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 50
                self.spriteDefinition()
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 51
                        self.match(VgdlParser.NEWLINE) 
                    self.state = 56
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

                self.state = 59 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==VgdlParser.NEWLINE or _la==VgdlParser.WORD):
                    break

            self.state = 61
            self.match(VgdlParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SpriteDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return VgdlParser.RULE_spriteDefinition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class RecursiveSpriteContext(SpriteDefinitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VgdlParser.SpriteDefinitionContext
            super().__init__(parser)
            self.name = None # Token
            self.spriteType = None # Token
            self.copyFrom(ctx)

        def nlindent(self):
            return self.getTypedRuleContext(VgdlParser.NlindentContext,0)

        def DEDENT(self):
            return self.getToken(VgdlParser.DEDENT, 0)
        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.WORD)
            else:
                return self.getToken(VgdlParser.WORD, i)
        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.WS)
            else:
                return self.getToken(VgdlParser.WS, i)
        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.ParameterContext)
            else:
                return self.getTypedRuleContext(VgdlParser.ParameterContext,i)

        def spriteDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.SpriteDefinitionContext)
            else:
                return self.getTypedRuleContext(VgdlParser.SpriteDefinitionContext,i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.NEWLINE)
            else:
                return self.getToken(VgdlParser.NEWLINE, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecursiveSprite" ):
                listener.enterRecursiveSprite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecursiveSprite" ):
                listener.exitRecursiveSprite(self)


    class NonRecursiveSpriteContext(SpriteDefinitionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a VgdlParser.SpriteDefinitionContext
            super().__init__(parser)
            self.name = None # Token
            self.spriteType = None # Token
            self.copyFrom(ctx)

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.WORD)
            else:
                return self.getToken(VgdlParser.WORD, i)
        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.WS)
            else:
                return self.getToken(VgdlParser.WS, i)
        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.ParameterContext)
            else:
                return self.getTypedRuleContext(VgdlParser.ParameterContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonRecursiveSprite" ):
                listener.enterNonRecursiveSprite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonRecursiveSprite" ):
                listener.exitNonRecursiveSprite(self)



    def spriteDefinition(self):

        localctx = VgdlParser.SpriteDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_spriteDefinition)
        self._la = 0 # Token type
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                localctx = VgdlParser.RecursiveSpriteContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                localctx.name = self.match(VgdlParser.WORD)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VgdlParser.WS:
                    self.state = 64
                    self.match(VgdlParser.WS)
                    self.state = 69
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 70
                self.match(VgdlParser.T__2)
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VgdlParser.WS:
                    self.state = 71
                    self.match(VgdlParser.WS)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 78
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 77
                    localctx.spriteType = self.match(VgdlParser.WORD)


                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VgdlParser.WORD:
                    self.state = 80
                    self.parameter()
                    self.state = 85
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 86
                self.nlindent()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==VgdlParser.WS:
                        self.state = 87
                        self.match(VgdlParser.WS)
                        self.state = 92
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 93
                    self.spriteDefinition()
                    self.state = 95
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==VgdlParser.NEWLINE:
                        self.state = 94
                        self.match(VgdlParser.NEWLINE)


                    self.state = 99 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==VgdlParser.WS or _la==VgdlParser.WORD):
                        break

                self.state = 101
                self.match(VgdlParser.DEDENT)
                pass

            elif la_ == 2:
                localctx = VgdlParser.NonRecursiveSpriteContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                localctx.name = self.match(VgdlParser.WORD)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VgdlParser.WS:
                    self.state = 104
                    self.match(VgdlParser.WS)
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 110
                self.match(VgdlParser.T__2)
                self.state = 114
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 111
                        self.match(VgdlParser.WS) 
                    self.state = 116
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

                self.state = 118
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                if la_ == 1:
                    self.state = 117
                    localctx.spriteType = self.match(VgdlParser.WORD)


                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 120
                        self.parameter() 
                    self.state = 125
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LevelMappingContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nlindent(self):
            return self.getTypedRuleContext(VgdlParser.NlindentContext,0)


        def DEDENT(self):
            return self.getToken(VgdlParser.DEDENT, 0)

        def LEVELDEFINITION(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.LEVELDEFINITION)
            else:
                return self.getToken(VgdlParser.LEVELDEFINITION, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.NEWLINE)
            else:
                return self.getToken(VgdlParser.NEWLINE, i)

        def getRuleIndex(self):
            return VgdlParser.RULE_levelMapping

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLevelMapping" ):
                listener.enterLevelMapping(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLevelMapping" ):
                listener.exitLevelMapping(self)




    def levelMapping(self):

        localctx = VgdlParser.LevelMappingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_levelMapping)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(VgdlParser.T__3)
            self.state = 129
            self.nlindent()
            self.state = 143 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VgdlParser.NEWLINE:
                    self.state = 130
                    self.match(VgdlParser.NEWLINE)
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 136
                self.match(VgdlParser.LEVELDEFINITION)
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 137
                        self.match(VgdlParser.NEWLINE) 
                    self.state = 142
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

                self.state = 145 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==VgdlParser.NEWLINE or _la==VgdlParser.LEVELDEFINITION):
                    break

            self.state = 147
            self.match(VgdlParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InteractionSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nlindent(self):
            return self.getTypedRuleContext(VgdlParser.NlindentContext,0)


        def DEDENT(self):
            return self.getToken(VgdlParser.DEDENT, 0)

        def interaction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.InteractionContext)
            else:
                return self.getTypedRuleContext(VgdlParser.InteractionContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.NEWLINE)
            else:
                return self.getToken(VgdlParser.NEWLINE, i)

        def getRuleIndex(self):
            return VgdlParser.RULE_interactionSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteractionSet" ):
                listener.enterInteractionSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteractionSet" ):
                listener.exitInteractionSet(self)




    def interactionSet(self):

        localctx = VgdlParser.InteractionSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_interactionSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(VgdlParser.T__4)
            self.state = 150
            self.nlindent()
            self.state = 164 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VgdlParser.NEWLINE:
                    self.state = 151
                    self.match(VgdlParser.NEWLINE)
                    self.state = 156
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 157
                self.interaction()
                self.state = 161
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,22,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 158
                        self.match(VgdlParser.NEWLINE) 
                    self.state = 163
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,22,self._ctx)

                self.state = 166 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==VgdlParser.NEWLINE or _la==VgdlParser.WORD):
                    break

            self.state = 168
            self.match(VgdlParser.DEDENT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InteractionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.sprite1 = None # Token
            self.interactionType = None # Token

        def WORD(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.WORD)
            else:
                return self.getToken(VgdlParser.WORD, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.WS)
            else:
                return self.getToken(VgdlParser.WS, i)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.ParameterContext)
            else:
                return self.getTypedRuleContext(VgdlParser.ParameterContext,i)


        def getRuleIndex(self):
            return VgdlParser.RULE_interaction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteraction" ):
                listener.enterInteraction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteraction" ):
                listener.exitInteraction(self)




    def interaction(self):

        localctx = VgdlParser.InteractionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_interaction)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            localctx.sprite1 = self.match(VgdlParser.WORD)
            self.state = 172 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 171
                self.match(VgdlParser.WORD)
                self.state = 174 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==VgdlParser.WORD):
                    break

            self.state = 179
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==VgdlParser.WS:
                self.state = 176
                self.match(VgdlParser.WS)
                self.state = 181
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 182
            self.match(VgdlParser.T__2)
            self.state = 183
            localctx.interactionType = self.match(VgdlParser.WORD)
            self.state = 187
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,26,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 184
                    self.parameter() 
                self.state = 189
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,26,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminationSetContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nlindent(self):
            return self.getTypedRuleContext(VgdlParser.NlindentContext,0)


        def DEDENT(self):
            return self.getToken(VgdlParser.DEDENT, 0)

        def terminationCriteria(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(VgdlParser.TerminationCriteriaContext)
            else:
                return self.getTypedRuleContext(VgdlParser.TerminationCriteriaContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(VgdlParser.NEWLINE)
            else:
                return self.getToken(VgdlParser.NEWLINE, i)

        def getRuleIndex(self):
            return VgdlParser.RULE_terminationSet

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminationSet" ):
                listener.enterTerminationSet(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminationSet" ):
                listener.exitTerminationSet(self)




    def terminationSet(self):

        localctx = VgdlParser.TerminationSetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_terminationSet)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 190
            self.match(VgdlParser.T__5)
            self.state = 191
            self.nlindent()
            self.state = 205 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==VgdlParser.NEWLINE:
                    self.state = 192
                    self.match(VgdlParser.NEWLINE)
                    self.state = 197
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 198
                self.terminationCriteria()
                self.state = 202
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,28,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
